--- a/src/app/modules/dashboard/components/users/users-list/users-list.component.html
+++ b/src/app/modules/dashboard/components/users/users-list/users-list.component.html
@@ -1,36 +1,38 @@
 <div class="flex-col rounded-lg bg-background px-8 py-8 sm:flex-row">
-    <div class="mb-4 flex items-center justify-between">
-      <div class="flex-col items-center">
-        <h3 class="text-md font-bold text-foreground">Users List</h3>
-      </div>
-      <button ubButton>
-        New User
-      </button>
+  <div class="mb-4 flex items-center justify-between">
+    <div class="flex-col items-center">
+      <h3 class="text-md font-bold text-foreground">Users List</h3>
     </div>
-  
-    <div class="relative overflow-x-auto">
-      <table class="w-full table-auto">
-        <thead class="text-xs uppercase text-muted-foreground">
-          <tr>
-            <th class="py-3 text-left">Name</th>
-            <th class="py-3 text-left">Email</th>
-          </tr>
-        </thead>
-        <tbody class="w-full table-auto">
-          @for (user of users; track $index) {
-            <tr
-             class="border-b border-dashed border-border hover:bg-card">
-                
-              <td class="py-2 pr-2">
-                <span href="#" class="text-foreground mb-1 text-sm font-semibold">{{ user.name }}</span>
-              </td>
-              <td class="py-2 pr-2">
-                <span href="#" class="text-foreground mb-1 text-sm font-semibold">{{ user.email }}</span>
-              </td>
-            </tr>
-          }
-        </tbody>
-      </table>
-    </div>
+
+    <ubDialogTrigger ubButton [ubDialogTrigger]="dialog">
+      New User
+    </ubDialogTrigger>
   </div>
-  
+
+  <div class="relative overflow-x-auto">
+    <table ubTable>
+      <thead ubTableHeader>
+        <tr ubTableRow>
+          <th ubTableHead>Name</th>
+          <th ubTableHead>Email</th>
+        </tr>
+      </thead>
+      <tbody class="w-full table-auto" ubTableBody>
+        @for(user of users; track $index) {
+          <tr ubTableRow>
+            <td ubTableCell>
+              {{ user.name }}
+            </td>
+            <td ubTableCell>
+              {{ user.email }}
+            </td>
+          </tr>
+          }
+      </tbody>
+    </table>
+  </div>
+
+  <ng-template #dialog>
+    <app-users-form />
+  </ng-template>
+</div>
