--- a/src/app/modules/dashboard/pages/users/users.component.html
+++ b/src/app/modules/dashboard/pages/users/users.component.html
@@ -1,1 +1,15 @@
-<users-list [users]="users()" [loadingState]="isLoading()" />
+<div class="bg-background flex-col rounded-lg px-8 py-8 sm:flex-row">
+  <div class="mb-4 flex items-center justify-between">
+    <div class="flex-col items-center">
+      <h3 class="text-md text-foreground font-bold">Users List</h3>
+    </div>
+
+    <ubDialogTrigger ubButton [ubDialogTrigger]="dialog"> New User </ubDialogTrigger>
+  </div>
+
+  <users-list [users]="users()" [loadingState]="isLoading()" />
+
+  <ng-template #dialog>
+    <app-users-form (handleSubmit)="getAll()" />
+  </ng-template>
+</div>
