--- a/src/app/modules/dashboard/pages/companies/companies.component.html
+++ b/src/app/modules/dashboard/pages/companies/companies.component.html
@@ -10,6 +10,6 @@
   <app-companies-list [companies]="companies()" />
 
   <ng-template #dialog>
-    <app-companies-form handleSubmit)="getAll()" />
+    <app-companies-form (handleSubmit)="getAll()" />
   </ng-template>
 </div>
